--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "module": "ESNext",
     "target": "ESNext",
     "declaration": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "types": ["@types/bun"]
   },
   "include": [
     "src"
