--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "module": "ESNext",
+    "lib": ["ESNext","DOM"],
     "target": "ESNext",
+    "module": "ESNext",
+    "moduleDetection": "force",
+    "allowJs": true,
+
     "declaration": true,
-    "outDir": "./dist",
-    "types": ["@types/bun"]
+    "outDir": "./dist"
   },
   "include": [
     "src"
