--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "types": "dist/index.d.ts",
   "files": ["/dist"],
-  "dependencies": {},
+  "dependencies": {
+    "@sinclair/typebox": "^0.34.29"
+  },
   "devDependencies": {
-    "@libsql/client": "^0.5.3",
-    "@types/bun": "^1.0.11",
-    "typescript": "^5.2.2"
+    "@libsql/client": "^0.5.6",
+    "@types/bun": "^1.2.4",
+    "typescript": "^5.8.2"
   }
 }
